# binfuse

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: freebsd.yml  msys2.yml  ubuntu.yml
bench/: large.cpp
include/binfuse/: filter.hpp  sharded_filter.hpp
scripts/: clang-format.sh  clang-tidy.sh
test/: CMakeLists.txt  filter.cpp  helpers.hpp  sharded_filter.cpp  test_binfuse.cpp
test/data/: sample.txt
